Fix option wrapping

--- a/tensorboard/webapp/widgets/dropdown/dropdown_component.scss
+++ b/tensorboard/webapp/widgets/dropdown/dropdown_component.scss
@@ -43,3 +43,8 @@ mat-select:focus {
   white-space: normal;
   word-break: break-all;
 }
+
+
+.option-content {
+  white-space: nowrap;
+}
